# apt

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  README  apt_config.h.in  bootstrap  configure  configure.in  configure.scan  mkinstalldirs
ant/: Makefile-orig  Makefile.am  Makefile.in  icgnodes.h  ntacts.c  ntcgen.c  ntcgen.h  ntclass.c  ntmain.c  ntparse.c  ntparse.grm  ntparse.h  ntparse.lst  ntparse.pt  ntparse.td  ntscan.c  ntscan.h  nttype.c  nttype.h
apt/: Makefile.am  Makefile.in  analyze.c  analyze.h  aptacts.c  aptacts.h  aptcgen.h  aptcgenc.c  aptclass.c  aptclass.h  aptmain.c  aptmain.h  aptparse.c  aptparse.h  aptparse.pt  aptparse.td  aptscan.c  aptscan.h  build.c  build.h  closure.c  closure.h  debug.c  debug.h  listfile.c  listfile.h  matrix.c  matrix.h  predict.c  predict.h  sets.c  sets.h  version.c  version.h
ast/: Makefile.am  Makefile.in  analysis.c  analysis.h  astcgen.h  astcgenc.c  astcgenj.c  astcgenm.c  astclass.c  astclass.h  astmain.c  astmain.h  astparse.c  astparse.h  astscan.c  astscan.h  closure.c  closure.h  convert.c  convert.h  find.c  find.h  matrix.c  matrix.h  mold.c  mold.h  version.c  version.h
docs/: act.ps
lib/: Makefile.am  Makefile.in  a-int.c  a-int.h  adterror.c  adterror.h  allocate.c  apt.h  aptimp.h  aptlib.c  aptlib.h  apttext.h  apttype.h  args.c  args.h  argument.c  argument.h  array.ct  array.ht  astack.c  astack.h  astimp.h  astlib.c  astlib.h  asttype.h  avltbl.c  avltbl.h  avltree.c  avltree.h  buffer.c  buffer.h  bufio.c  bufio.h  d_queue.h  d_stack.h  deque.c  deque.h  gprintf.c  gprintf.h  hashtbl.c  (+9 more)
(+36 files in other folders)
