dnl Process this file with autoconf to produce a configure script.
AC_INIT(lib/a-int.c)
AM_CONFIG_HEADER(apt_config.h)
dnl AC_CONFIG_AUX_DIR(config)
PACKAGE=apt
VERSION=1.2.0

AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(apt, $VERSION)
dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_MAKE_SET
AC_PROG_INSTALL
dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(stdarg.h varargs.h, break)
AC_CHECK_HEADERS(stdio.h ctype.h string.h stdlib.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile lib/Makefile ast/Makefile apt/Makefile ant/Makefile)
