AM_CFLAGS=-I..

lib_LIBRARIES=liball.a

liball_a_SOURCES=adterror.c avltree.c astack.c avltbl.c buffer.c bufio.c deque.c hashtbl.c iqueue.c queue.c stack.c aptlib.c astlib.c allocate.c argument.c args.c gprintf.c sstring.c

include_HEADERS=adterror.h a-int.h allocate.h apt.h aptimp.h aptlib.h apttext.h apttype.h args.h argument.h astack.h astimp.h astlib.h asttype.h avltbl.h avltree.h buffer.h bufio.h cheaders.h deque.h d_queue.h d_stack.h gprintf.h hashtbl.h iqueue.h queue.h sstring.h stack.h
